# wubwub

./: .gitattributes  .gitignore  LICENSE.txt  README  README.md
res/: res.qrc
res/qml/: albumrecord.qml  albumview.qml  artistview.qml  qmldir
res/shaders/: basic.frag
res/shaders/examples/: coolwave.frag  raymarch.frag
src/: CMakeLists.txt  albumview.cpp  albumview.h  main.cpp  playlist.cpp  playlist.h  qmltab.cpp  qmltab.h  recentalbumsview.cpp  recentalbumsview.h  ssmp.cpp  ssmp.h  ssmp.pro  wubwub.cpp  wubwub.h  wubwub.pro  wubwub.ui
src/albumtab/: albumtab.cpp  albumtab.h  prettytext.cpp  prettytext.h  ssmptabwidget.cpp  ssmptabwidget.h  wwtabwidget.cpp  wwtabwidget.h
src/dbi/: TagExtractor.cpp  TagExtractor.h  dbi.cpp  dbi.h
src/models/: roleitemmodel.cpp  roleitemmodel.h
src/options/: options.ui  optionswindow.cpp  optionswindow.h
src/playback/: playbackwidget.cpp  playbackwidget.h  playbackwidget.ui
src/qmltab/: albumview.cpp  albumview.h  artistview.cpp  artistview.h  qmlalbumtab.cpp  qmlalbumtab.h  qmltab.cpp  qmltab.h  recentalbumstab.cpp  recentalbumstab.h
src/search/: wwsearch.cpp  wwsearch.h
src/shaders/: basic.frag
src/viz/: firstviz.cpp  firstviz.h  vizrenderthread.cpp  vizrenderthread.h  vizwidget.cpp  vizwidget.h
ssmp/: TagExtractor.cpp  TagExtractor.h  album.ui  albumW.cpp  albumW.h  albumtab.cpp  albumtab.h  albumview.cpp  albumview.h  artistalbumsview.cpp  artistalbumsview.h  dbi.cpp  dbi.h  libdialog.cpp  libdialog.h  libdialog.ui  main.cpp  music.db  musicslider.cpp  musicslider.h  nowplaying.cpp  nowplaying.h  options.ui  optionswindow.cpp  optionswindow.h  playbackmgr.cpp  playbackmgr.h  playbackwidget.ui  playlist.cpp  playlist.h  recentalbumsview.cpp  recentalbumsview.h  res.qrc  ssmp.cpp  ssmp.h  ssmp.pri  ssmp.pro  ssmp.qrc  ssmp.rc  ssmp.ui  (+1 more)
ssmp/albumtab/: albumtab.cpp  albumtab.h  prettytext.cpp  prettytext.h  ssmptabwidget.cpp  ssmptabwidget.h
ssmp/dbi/: TagExtractor.cpp  TagExtractor.h  dbi.cpp  dbi.h
ssmp/options/: optionswindow.cpp  optionswindow.h
ssmp/playback/: musicslider.cpp  musicslider.h  playbackmgr.cpp  playbackmgr.h  playbackwidget.cpp  playbackwidget.h  playbackwidget.ui
ssmp/search/: ssmpsearch.cpp  ssmpsearch.h
ssmp/shaders/: basic.frag
ssmp/viz/: firstviz.cpp  firstviz.h  testviz.cpp  testviz.h  vizrenderthread.cpp  vizwidget.cpp  vizwidget.h
ssmp/viz/glhelp/: uniformbufferobject.cpp  uniformbufferobject.h
